# serialization_benchmark

./: .gitmodules  CMakeLists.txt  conanfile.txt  main_capnp.cpp  main_flat.cpp  main_messgen.cpp
messages/capnproto/: login.capnp  transaction.capnp
messages/flatbuffers/: login.fbs  transaction.fbs
messages/messgen/: _protocol.yaml  transaction.yaml
messages/protocol/test/: login_flat.yaml
